--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,12 @@ header ul li a{
     text-decoration: none;
 }
 .content .imgBox{
+    position: relative;
+    margin-left: 25px;
     display: flex;
-    width: 400px;
-    justify-content: flex-start;
-    padding-right: 30px;
+    width: 600px;
+    height: 500px;
+    padding-right: 400px;
 }
 .content .imgBox img{
     max-width: 350px;
@@ -144,4 +146,88 @@ header ul li a{
     height: 100%;
     background: #017143;
     clip-path: circle(650px at right 800px );
+}
+.starbucks {
+    transition:0.5s;
+}
+.textBox span {
+    transition: opacity 0.5s;
+    opacity: 0;
+}
+@media (max-width: 991px){
+    header{
+        padding: 20px 50px;
+    }
+    header .logo{
+        max-width: 60px;
+    }
+    header ul{
+        display: none;
+    }
+    .toggle{
+        position: relative;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        background: url(menu.png);
+        background-size: 30px;
+        background-repeat: no-repeat;
+        filter: invert(1);
+        z-index: 11;
+    }
+    .toggle.active{
+        position: fixed;
+        right: 40px;
+        background: url(close.png);
+        background-size: 25px;
+        background-repeat: no-repeat;
+        filter: invert(1);
+    }
+    header ul.navigation.active{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #fff;
+        z-index: 10;
+    }
+    header ul li a{
+        font-size: 1.5em;
+        margin: 5px 0;
+    }
+    section{
+        padding: 20px 20px 120px; 
+    }
+    .content{
+        flex-direction: column;
+        margin-top: 100px;
+    }
+    .content .textBox h2{
+        font-size: 2.5em;
+    }
+    .content .textBox{
+        max-width: 100%;
+    }
+    .content .imgBox{
+        max-width: 100%;
+        justify-content: center;
+    }
+    .content .imgBox img{
+        max-width: 300px;
+    }
+    .thumb li img{
+        max-width: 40px;
+
+    }
+    .circle{ 
+        clip-path: circle(400px at center bottom );
+    }
+    .sci{
+        background-color: #017143;
+    }
 }
