--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ header ul li a{
 .content .imgBox{
     position: relative;
     margin-left: 25px;
-    display: flex;
+    display: flex-start;
     width: 600px;
     height: 500px;
     padding-right: 400px;
@@ -205,16 +205,32 @@ header ul li a{
     }
     .content .textBox h2{
         font-size: 2.5em;
+        margin-bottom: 15px;
     }
     .content .textBox{
         max-width: 100%;
     }
     .content .imgBox{
         max-width: 100%;
+        display: flex;
+        align-items: center;
         justify-content: center;
+
+    }
+    .imgBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .content .imgBox img{
         max-width: 300px;
+    }
+    .starbucks{
+        position: absolute;
+        top: 0;
+        left: 40px;
+        width: 100%;
+        height: 100%;
     }
     .thumb li img{
         max-width: 40px;
@@ -222,8 +238,5 @@ header ul li a{
     }
     .circle{ 
         clip-path: circle(400px at center bottom );
-    }
-    .sci{
-        background-color: #017143;
     }
 }
