--- a/styles.css
+++ b/styles.css
@@ -229,8 +229,9 @@ header ul li a{
         position: absolute;
         top: 0;
         left: 40px;
-        width: 100%;
-        height: 100%;
+        width: 600px;
+        height: 500px;
+        max-width: 200px;
     }
     .thumb li img{
         max-width: 40px;
